--- a/MAA1.HTML
+++ b/MAA1.HTML
@@ -322,7 +322,7 @@
             <p class="gc"><i class="fa-solid fa-gift fa-beat" style="color: #FFD43B;"></i><span class="s1">Gift Cards</span></p>
             <p class="gc"><i class="fa-solid fa-star fa-flip" style="color: #FFD43B;"></i><span class="s1">Advertise</span></p>
             <p class="gc"><i class="fa-solid fa-question fa-beat" style="color: #FFD43B;"></i><span class="s1">Help</span></p>
-          <a href="MAA.HTML" class="gth"><p class="gc"><i class="fa-sharp fa-solid fa-house fa-bounce" style="color: #FFD43B;"></i><span class="s1">Go to Top</span></p></a>
+          <a href="#top" class="gth"><p class="gc"><i class="fa-sharp fa-solid fa-house fa-bounce" style="color: #FFD43B;"></i><span class="s1">Go to Top</span></p></a>
         </div>
         
         </div>
