--- a/b1.html
+++ b/b1.html
@@ -15,19 +15,17 @@
 <body>
     <navbar>
         <div class="d1">
-            <div><a href="MAA.HTML" class="home"><i class="fa-solid fa-house"></i><span class="span">Home</span></a>
+            <div><a href="MAA2.HTML" class="home"><i class="fa-solid fa-house"></i><span class="span">Home</span></a>
             </div>
             <div class="grocery">
-                <!-- <div>
-                <a href="mobile.html" class="m1">MOBILES</a>
-            </div> -->
+             
                 <div class="dd1">
                     <div class="l2"><input type="text" placeholder="Search for product, brands more" class="i1"></div>
                     <a href="">
                         <div class="icon"><i class="fa-solid fa-magnifying-glass"></i></div>
                     </a>
                 </div>
-                <div class="login"><a href="login.html" class="login">Login</a></div>
+                <div class="login"><a href="L1.html" class="login">Login</a></div>
             </div>
 
             <div class="bcseller">Become a Seller</div>
@@ -138,7 +136,7 @@
                                     <div class="ad311">Top Rated Microphones</div>
                                     <div class="ad312">From <span><span><i
                                                     class="fa-solid fa-indian-rupee-sign"></i></span>299</span></div>
-                                    <div class="ad313">Boya,JBL,Rode & more</div>
+                                    <div class="ad313">Boya, JBL, Rode & more</div>
                                 </div>
                             </div>
                             <div class="ad3">
@@ -173,6 +171,7 @@
                     </div>
                 </book>
     </content>
+    <br>
 
     <footer>
         <div class="footer">
